--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,20 +41,20 @@ jobs:
       - name: Log IS_WINDOWS
         run: echo "IS_WINDOWS=${{ env.IS_WINDOWS }}"
 
-      - if: ${{ env.IS_WINDOWS == false }}
+      - if: ${{ env.IS_WINDOWS == 'false' }}
         uses: DeterminateSystems/nix-installer-action@main
-      - if: ${{ env.IS_WINDOWS == false }}
+      - if: ${{ env.IS_WINDOWS == 'false' }}
         uses: DeterminateSystems/magic-nix-cache-action@main
-      - if: ${{ env.IS_WINDOWS == false }}
+      - if: ${{ env.IS_WINDOWS == 'false' }}
         run: nix build .?submodules=1#packages.${{ matrix.attr }}
-      - if: ${{ env.IS_WINDOWS == false }}
+      - if: ${{ env.IS_WINDOWS == 'false' }}
         run: zip -r ${{ matrix.attr }}.zip result/bin
 
-      - if: ${{ env.IS_WINDOWS }}
+      - if: ${{ env.IS_WINDOWS == 'true' }}
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-pc-windows-msvc
-      - if: ${{ env.IS_WINDOWS }}
+      - if: ${{ env.IS_WINDOWS == 'true' }}
         run: |
           cargo build -p ${{ matrix.package }} --release --target x86_64-pc-windows-msvc
           mkdir -p result/bin
