--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - if: ${{ env.IS_WINDOWS == 'false' }}
         run: nix build .?submodules=1#packages.${{ matrix.attr }}
       - if: ${{ env.IS_WINDOWS == 'false' }}
-        run: zip -r ${{ matrix.attr }}.zip result/bin
+        run: zip -r ${{ matrix.attr }}.zip result/bin/*
 
       - if: ${{ env.IS_WINDOWS == 'true' }}
         uses: dtolnay/rust-toolchain@stable
@@ -40,11 +40,11 @@ jobs:
       - if: ${{ env.IS_WINDOWS == 'true' }}
         run: |
           cargo build -p ${{ matrix.package }} --release --target x86_64-pc-windows-msvc
-          mkdir -p result/bin
-          mv target/x86_64-pc-windows-msvc/release result/bin
-          cp -r assets result/bin
+          mkdir result
+          mv target/x86_64-pc-windows-msvc/release/*.exe result
+          cp -r assets result
       - if: ${{ env.IS_WINDOWS == 'true' }}
-        run: Compress-Archive -Path result/bin -DestinationPath ${{ matrix.attr }}.zip
+        run: Compress-Archive -Path result -DestinationPath ${{ matrix.attr }}.zip
 
       - uses: actions/upload-artifact@v3
         with:
