--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,10 @@ on:
         type: string
         required: true
 
+concurrency:
+  group: "version"
+  cancel-in-progress: false
+
 jobs:
   build-matrix:
     uses: ./.github/workflows/build-matrix.yml
