--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,11 @@ name: "Build"
 
 on:
   workflow_call:
+  workflow_dispatch:
+
+concurrency:
+  group: "version"
+  cancel-in-progress: false
 
 jobs:
   build-matrix:
