--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         id: release-notes
         uses: RedCrafter07/release-notes-action@v1.0.0
         with:
-          tag-name: ${{ github.event.inputs.tag-name }}
+          tag-name: ${{ github.event.inputs.version }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
   upload-artifacts:
