--- a/components/wired-log/Cargo.toml
+++ b/components/wired-log/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unavi-ui"
+name = "wired-log"
 version.workspace = true
 edition.workspace = true
 repository.workspace = true
@@ -10,9 +10,13 @@ crate-type = ["cdylib"]
 
 [dependencies]
 bitflags.workspace = true
+tracing.workspace = true
 wit-bindgen-rt.workspace = true
 
 [package.metadata.component]
-package = "unavi:ui"
+package = "wired:log"
+
+[package.metadata.component.target]
+world = "logger"
 
 [package.metadata.component.dependencies]
