--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,6 @@ jobs:
         with:
           submodules: "true"
           fetch-depth: 0
-      - uses: Swatinem/rust-cache@v2
 
       - if: ${{ env.IS_WINDOWS == 'false' }}
         uses: DeterminateSystems/nix-installer-action@main
@@ -34,6 +33,8 @@ jobs:
       - if: ${{ env.IS_WINDOWS == 'false' }}
         run: zip -r ${{ matrix.attr }}.zip result/bin/*
 
+      - if: ${{ env.IS_WINDOWS == 'true' }}
+        uses: Swatinem/rust-cache@v2
       - if: ${{ env.IS_WINDOWS == 'true' }}
         uses: dtolnay/rust-toolchain@stable
         with:
