--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -50,7 +50,8 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo metadata # Force Cargo.lock to update
+      - name: Force Cargo.lock to update
+        run: cargo update --worksapce
 
       - uses: EndBug/add-and-commit@v9
         with:
