--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
 
-      - run: nix develop -c nix run .#check-components
+      - run: nix develop -c nix run .?submodules=1#check-components
       - uses: EndBug/add-and-commit@v9
         with:
           message: "chore: generate component bindings"
