--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -19,13 +19,12 @@ bevy_vrm = "0.0.8"
 did-method-key = "0.2.2"
 didkit = { version = "0.6.0", default-features = false, features = ["w3c", "ed25519", "ripemd-160", "http-did"] }
 tracing.workspace = true
+wasm-bridge = { version = "0.3.0", features = ["component-model"] }
 xwt = "0.6.0"
 xwt-core = "0.2.2"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
-wasm-bindgen = "0.2.89"
 xwt-web-sys = "0.6.0"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-wasmtime = { version = "18.0.2", features = ["component-model"] }
 wtransport.workspace = true
