--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -13,9 +13,11 @@ disable-cert-validation = ["wtransport/dangerous-configuration"]
 
 [dependencies]
 bevy-async-task = "1.4.0"
+bevy-tnua = "0.15.0"
+bevy-tnua-xpbd3d = "0.2.0"
 bevy.workspace = true
-bevy_rapier3d = { version = "0.25.0", features = ["simd-stable"] }
 bevy_vrm = "0.0.8"
+bevy_xpbd_3d = { version = "0.4.2", features = ["simd"] }
 did-method-key = "0.2.2"
 didkit = { version = "0.6.0", default-features = false, features = ["w3c", "ed25519", "ripemd-160", "http-did"] }
 tracing.workspace = true
