--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ bitflags = "2.4.2"
 tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+wasm-bindgen = "=0.2.91"
 wit-bindgen-rt = "0.20.0"
 wtransport = "0.1.8"
 
