--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,4 @@ jobs:
           message: "chore: lint"
           default_author: github_actions
 
-      - run: nix develop -c cargo doc --workspace --all-features --no-deps
-      - run: nix develop -c cargo test --workspace --all-features --all-targets
-      - run: nix develop -c cargo test --workspace --all-features --doc
+      - run: nix flake check .?submodules=1
