--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,6 @@ jobs:
 
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
-      - uses: Swatinem/rust-cache@v2
 
       - run: nix develop -c nix run .?submodules=1#check-components
       - uses: EndBug/add-and-commit@v9
@@ -43,4 +42,4 @@ jobs:
           message: "chore: lint"
           default_author: github_actions
 
-      - run: nix flake check .?submodules=1
+      - run: nix flake check .?submodules=1 --all-systems
