--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,15 +5,24 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-matrix:
-    uses: ./.github/workflows/build-matrix.yml
-
+  nix-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - id: set-matrix
+        run: |
+          matrix=$(nix eval --json .#githubActions.matrix)
+          echo matrix=$matrix >> $GITHUB_OUTPUT
   build:
     needs:
-      - build-matrix
+      - nix-matrix
     strategy:
       fail-fast: false
-      matrix: ${{ fromJSON(needs.build-matrix.outputs.matrix) }}
+      matrix: ${{ fromJSON(needs.nix-matrix.outputs.matrix) }}
     name: ${{ matrix.attr }}
     runs-on: ${{ matrix.os }}
     env:
