--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,6 @@ on:
         required: true
 
 jobs:
-  build-matrix:
-    uses: ./.github/workflows/build-matrix.yml
-
   release-notes:
     runs-on: ubuntu-latest
     outputs:
@@ -25,24 +22,26 @@ jobs:
 
   upload-artifacts:
     needs:
-      - build-matrix
       - release-notes
-    strategy:
-      fail-fast: false
-      matrix: ${{ fromJSON(needs.build-matrix.outputs.matrix) }}
-      max-parallel: 1
     runs-on: ubuntu-latest
     steps:
       - id: download-artifact
         uses: actions/download-artifact@v4
-        with:
-          name: ${{ matrix.attr }}
+
+      - name: List files
+        run: ls -l ${{ steps.download-artifact.outputs.download-path }} > files.txt
+
+      - name: Add version to file names
+        run: |
+          cd ${{ steps.download-artifact.outputs.download-path }}
+          for file in *; do
+            mv $file $file-${{ inputs.version }}
+          done
 
       - uses: svenstaro/upload-release-action@v2
         with:
-          asset_name: ${{ matrix.attr }}-${{ inputs.version }}.zip
           body: ${{ needs.release-notes.outputs.release-notes }}
-          file: ${{ steps.download-artifact.outputs.download-path }}/${{ matrix.attr }}.zip
+          file_glob: ${{ steps.download-artifact.outputs.download-path }}
           prerelease: ${{ contains(inputs.version, 'beta') }}
           repo_token: ${{ github.token }}
           tag: ${{ inputs.version }}
