--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,27 +8,19 @@ on:
         required: true
 
 jobs:
-  release-notes:
+  upload-release:
     runs-on: ubuntu-latest
-    outputs:
-      release-notes: ${{ steps.release-notes.outputs.release-notes }}
     steps:
-      - name: Generate Release Notes
-        id: release-notes
+      - id: release-notes
         uses: RedCrafter07/release-notes-action@v1.0.0
         with:
           tag-name: ${{ inputs.version }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  upload-artifacts:
-    needs:
-      - release-notes
-    runs-on: ubuntu-latest
-    steps:
       - id: download-artifact
         uses: actions/download-artifact@v4
 
-      - name: List files
+      - name: List downloaded files
         run: ls -l ${{ steps.download-artifact.outputs.download-path }} > files.txt
 
       - name: Add version to file names
@@ -40,7 +32,7 @@ jobs:
 
       - uses: svenstaro/upload-release-action@v2
         with:
-          body: ${{ needs.release-notes.outputs.release-notes }}
+          body: ${{ steps.release-notes.outputs.release-notes }}
           file_glob: ${{ steps.download-artifact.outputs.download-path }}
           prerelease: ${{ contains(inputs.version, 'beta') }}
           repo_token: ${{ github.token }}
