try new release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,26 +17,17 @@ jobs:
           tag-name: ${{ inputs.version }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: download-artifact
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
 
       - name: Add version to file names
         run: |
-          cd ${{ steps.download-artifact.outputs.download-path }}
-
           for file in *; do
-            echo "Renaming $file"
-            mv "$file" "${file}-${{ inputs.version }}"
+            mv "$file" "${file}-${{ inputs.version }}.zip"
           done
 
-          echo "Done"
-          ls
-
-      - uses: svenstaro/upload-release-action@v2
+      - uses: ncipollo/release-action@v1
         with:
+          artifacts: ./*
           body: ${{ steps.release-notes.outputs.release-notes }}
-          file: ${{ steps.download-artifact.outputs.download-path }}/*
-          file_glob: true
           prerelease: ${{ contains(inputs.version, 'beta') }}
-          repo_token: ${{ github.token }}
           tag: ${{ inputs.version }}
