--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,8 @@ jobs:
           tag-name: ${{ inputs.version }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: actions/download-artifact@v4
+      - id: download-artifact
+        uses: actions/download-artifact@v4
 
       - name: Add version to file names
         run: |
@@ -30,7 +31,7 @@ jobs:
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "*.zip"
+          artifacts: "${{ steps.download-artifact.outputs.download-path }}/*.zip"
           body: ${{ steps.release-notes.outputs.release-notes }}
           prerelease: ${{ contains(inputs.version, 'beta') }}
           tag: ${{ inputs.version }}
