fix release file name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
             cd $dir
 
             for file in *; do
-              mv $file ../$file-${{ inputs.version }}.zip
+              mv $file ../${file%.zip}-${{ inputs.version }}.zip
             done
 
             cd ..
