replace cargo path slashes in windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,11 @@ jobs:
           cargo install cargo-component
 
           foreach ($component in Get-ChildItem -Path components) {
+              # Replace all forward slashes with backslashes in Cargo.toml
+              cd $component.FullName
+              (Get-Content -Path "Cargo.toml") -replace "/", "\" | Set-Content -Path "Cargo.toml"
+              cd ..
+
               cargo component build -p $component.Name --profile wasm-release
           }
 
