--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,6 +84,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: components
+          path: components.zip
 
       - if: ${{ matrix.package == 'unavi-app' }}
         name: Copy generated assets
