--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,10 +96,10 @@ jobs:
           cargo build -p ${{ matrix.package }} --release --target x86_64-pc-windows-msvc
           mv target/x86_64-pc-windows-msvc/release/*.exe result
 
-      - run: Compress-Archive -Path result -DestinationPath x86_64-windows.${{ matrix.path }}.zip
+      - run: Compress-Archive -Path result -DestinationPath x86_64-windows.${{ matrix.package }}.zip
 
       - uses: actions/upload-artifact@v4
         with:
-          name: x86_64-windows.${{ matrix.path }}
-          path: x86_64-windows.${{ matrix.path }}.zip
+          name: x86_64-windows.${{ matrix.package }}
+          path: x86_64-windows.${{ matrix.package }}.zip
           retention-days: 1
