--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,6 +100,6 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: x86_64-windows.${{ matrix.package }}
+          name: build-x86_64-windows.${{ matrix.package }}
           path: x86_64-windows.${{ matrix.package }}.zip
           retention-days: 1
