--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,12 @@ jobs:
           version-regex: '^version = "(.*)"'
 
       - uses: dtolnay/rust-toolchain@stable
+
       - name: Force Cargo.lock to update
         run: cargo update --workspace
+
+      - name: Delete version branch if it exists
+        run: git push origin --delete release-v${{ steps.semver.outputs.version }} || echo "Branch doesn't exist"
 
       - uses: EndBug/add-and-commit@v9
         with:
