--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,15 +39,17 @@ jobs:
       - name: Force Cargo.lock to update
         run: cargo update --workspace
 
-      - name: Delete version branch if it exists
-        run: git push origin --delete release-v${{ steps.semver.outputs.version }} || echo "Branch doesn't exist"
+      - name: Delete branch and tag if they exist
+        run: |
+          git push origin --delete release-v${{ steps.semver.outputs.version }} || echo "Branch doesn't exist"
+          git tag -d v${{ steps.semver.outputs.version }} || echo "Tag doesn't exist"
 
       - uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
           message: "chore: bump ${{ steps.semver.outputs.version }}"
           new_branch: release-v${{ steps.semver.outputs.version }}
-          tag: v${{ steps.semver.outputs.version }} --force
+          tag: v${{ steps.semver.outputs.version }}
 
   build:
     needs: version
